@startuml
class DungeonFacade {
  -preparationService : PreparationService
  -battleService : BattleService
  -rewardService : RewardService
  +setRandomSeed(seed : long) : DungeonFacade
  +runAdventure(hero : HeroProfile, boss : BossEnemy, action : AttackAction) : AdventureResult
}

class PreparationService {
  +prepare(hero : HeroProfile, boss : BossEnemy, action : AttackAction) : String
}

class BattleService {
  -random : Random
  +setRandomSeed(seed : long) : BattleService
  +battle(hero : HeroProfile, boss : BossEnemy, action : AttackAction) : AdventureResult
}

class RewardService {
  +determineReward(battleResult : AdventureResult) : String
}

class AdventureResult {
  -winner : String
  -rounds : int
  -reward : String
  -log : List<String>
  +getWinner() : String
  +setWinner(winner : String) : void
  +getRounds() : int
  +setRounds(rounds : int) : void
  +getReward() : String
  +setReward(reward : String) : void
  +addLine(line : String) : void
  +getLog() : List<String>
}

class HeroProfile {
  -name : String
  -health : int
  +HeroProfile(name : String, health : int)
  +getName() : String
  +getHealth() : int
  +takeDamage(amount : int) : void
  +isAlive() : boolean
}

class BossEnemy {
  -name : String
  -health : int
  -attackPower : int
  +BossEnemy(name : String, health : int, attackPower : int)
  +getName() : String
  +getHealth() : int
  +getAttackPower() : int
  +takeDamage(amount : int) : void
  +isAlive() : boolean
}

interface AttackAction {
  +getActionName() : String
  +getDamage() : int
  +getEffectSummary() : String
}

DungeonFacade --> PreparationService
DungeonFacade --> BattleService
DungeonFacade --> RewardService
DungeonFacade --> AdventureResult
DungeonFacade ..> HeroProfile
DungeonFacade ..> BossEnemy
DungeonFacade ..> AttackAction

BattleService ..> HeroProfile
BattleService ..> BossEnemy
BattleService ..> AttackAction
BattleService --> AdventureResult

PreparationService ..> HeroProfile
PreparationService ..> BossEnemy
PreparationService ..> AttackAction

RewardService ..> AdventureResult
@enduml